<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IRKit 1.0.1</string>
    <string name="no_device">No device</string>
    <string name="hint_ssid">SSID</string>
    <string name="column_ssid">SSID</string>
    <string name="column_password">パスワード</string>
    <string name="separater">:</string>
    <string name="page01">[1/4] IRKitの起動</string>
    <string name="page02">[2/4] Wi-Fiの設定</string>
    <string name="page03">[3/4] IRKitとの接続</string>
    <string name="page04">[4/4] IRKitへの設定値の送信</string>
    <string name="index1">IRKitにPCやアダプタからなど、電力を供給できる状態にしたmicroUSBケーブルを接続すると、赤いランプが点滅します。</string>
    <string name="index1_1">赤いランプが点滅しない場合は、USBの横にあるリセットボタンを７秒押してリセットします。</string>
    <string name="index2">IRKitを接続したいネットワークのWi-FiスポットのSSIDとパスワードを入力して、次のページに移動します。</string>
    <string name="index3">以下のボタンを押し、Wi-Fi設定画面からIRKitXXXXを選択してください。</string>
    <string name="index4">IRKitにWi-Fiの接続情報を送信します。ボタンをタップし、Wi-Fi設定画面からIRKitXXXX と接続を行ってください。Wi-Fi設定画面から本画面に戻ると、IRKitがWi-Fiスポットに接続します。接続が成功するとIRKitのLEDは緑の点滅・水色の点滅後に青に点灯します。</string>
    <string name="index4_1">緑の点滅後に赤の点滅の場合には、Wi-Fiスポットの設定ミスが考えられますので[2/3]の手順を再度やり直してください。</string>
    <string name="security_button01">None</string>
    <string name="security_button02">WEP</string>
    <string name="security_button03">WPA/WPA2</string>
    <string name="wifi_setting_page_button">WiFi設定画面</string>
    <string name="wifi_setting_button">WiFi情報の送信</string>
    <string name="shared_preference_name">irkit</string>
    <string name="preference_ssid_name">access_point_ssid</string>
    <string name="preference_password_name">access_point_password</string>
    <string name="preference_irkit_name">irkit_name</string>
    
    <string name="ind_message_prepare">処理中・・・</string>
    <string name="alert_title_error">エラー</string>
    <string name="alert_title_prepared">準備完了</string>
    <string name="alert_title_connection">接続成功</string>
    <string name="alert_message_no_network">インターネットへの接続が不安定です。インターネットへの接続を確認し、再度お試しください。</string>
    <string name="alert_message_prepared">IRKitにつなぐ準備ができました。WiFiをIRKitに切り替えてください。</string>
    <string name="alert_message_is_irkit">IRKitのWiFiに接続されました。次のページへ進みましょう。</string>
    <string name="alert_message_is_not_irkit">IRKitのWiFiに接続されていません。設定画面からWiFiをIRKitに切り替えてください。</string>
    <string name="alert_message_network_error">ネットワークエラー。接続手順か、設定したWiFiのSSID・Type・パスワードを確認してください。</string>
    <string name="alert_message_connected_with_wifi">接続されました！家のWiFiに切り替えてください。</string>
    <string name="alert_message_connected">IRKitがネットワークに接続されていることを確認しました。</string>
    <string name="alert_btn_close">閉じる</string>

    <!--
    IRKit Parameters.
    IRKitから取得したAPI KEYを記載してください。
     -->
    <string name="apikey">[YOUR API KEY]</string>

</resources>