<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00a0e9"
        android:gravity="center"
        android:text="@string/page01"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img01" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/index1"
                android:textColor="#666666"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/index1_1"
                android:textColor="#ff0000"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>